Fixed theme toggle position on mobile devices

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -222,6 +222,10 @@ input:checked + .slider:before {
     border-bottom: none;
   }
 
+  .topBar {
+    align-items: start;
+  }
+
   .mainTitle {
     font-size: 25px;
     margin-bottom: 10px;
